app/assets/stylesheets/module-slideshow.css.scss
.slideshow-wrapper {
    margin-bottom: 20px;
}
.slideshow-photo-wrapper {
    position: relative;
    @extend .media-bg;
}
.slideshow-photo {
    max-width: 100%;
    max-height: 333px;
    display: block;
    margin: 0 auto;
    cursor: -webkit-zoom-in;
    cursor: -moz-zoom-in;
}
.slideshow-desc {
    margin: 0;
    font-family: helvetica, sans-serif;
    padding: 5px;
    background-color: $background_gray;
    position: relative;
}
.slideshow-nav-item {
    cursor: pointer;
    position: absolute;
    top: 0;

    background-color: #fff;
    font-size: 30px;
    padding: 10px;
    opacity: 0.9;
    color: #222;
	
	font-family: georgia, serif;
}
.slideshow-nav--next {
    right: 0;
}
.slideshow-nav--previous {
    left: 0;
}
.slideshow-info--flickr-link {
    font-weight: normal;
    text-transform: lowercase;
    color: #888;
    font-size: 80%;
    font-family: helvetica neue, helvetica, arial, sans-serif;
}

.litebox {
    display: none;
    position: absolute;
    top: 50%;
    left: 50%;
    z-index:1002;
    box-shadow: 0 0 5px black;
    border: 10px solid #eee;
    cursor: -webkit-zoom-out;
    cursor: -moz-zoom-out;
    max-width: 90%;
    max-height: 90%;
}
.mask {
    display: none;
    position: absolute;
    top: 0;
    left: 0;
    bottom: 0;
    right: 0;
    background-color: black;
    opacity: .6;
    z-index:1001;
}

.stop-scrolling {
    height: 100%;
    overflow: hidden;
}

.pin-it-button-wrapper {
    position: absolute;
    bottom: 0;
    left: 5px;
}

